<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical">

    <!--标题-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/tv_heroTitle"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        />
    <!--鳄鱼-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_eyu"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/owl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="#dddddd">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_eyu"
                    android:textColor="@android:color/black"
                    android:textSize="25sp" />


                <TextView
                    android:id="@+id/tv_eyuTouch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20dp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_eyuName"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_eyuTip"
                android:textSize="15sp"
                />

        </LinearLayout>
    </LinearLayout>

    <!--瑞文-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_ruiwen"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/owl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="#dddddd">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_ruiwen"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    />


                <TextView
                    android:id="@+id/tv_ruiwenTouch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ruiwenName"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ruiwenTip"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>

    <!--亚索-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_yasuo"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/owl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="#dddddd">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_yasuo"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    />



            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_yasuoName"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_yasuoTip"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>

    <!--皇子-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_huangzi"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/owl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="#dddddd">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_huangzi"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    />


                <TextView
                    android:id="@+id/tv_huangziTouch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_huangziName"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_huangziTip"
                android:textSize="15sp"
                />

        </LinearLayout>
    </LinearLayout>


    <!--提莫-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_timo"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/owl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="#dddddd">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_timo"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    />


                <TextView
                    android:id="@+id/tv_timoTouch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_timoName"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_timoTip"
                android:textSize="15sp"
                />

        </LinearLayout>
    </LinearLayout>

    <!--诺手-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_nuoshou"
        >
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/owl"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:background="#dddddd">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nuoshou"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    />

                <TextView
                    android:id="@+id/tv_nuoshouTouch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20dp"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nuoshouName"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nuoshouTip"
                android:textSize="15sp"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>